<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="@dimen/fragment_horizontal_padding"
        android:paddingRight="@dimen/fragment_horizontal_padding"
        tools:context=".personal.match.CoachFragment">

    <TextView
            android:id="@+id/coached_class"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/coached＿class"
            android:textSize="18dp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
            android:id="@+id/coached_radio_group"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/coached_class">

        <RadioButton
                android:id="@+id/coached_select_compulsory"
                android:layout_width="55dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/ic_coached_class_select"
                android:button="@null"
                android:checked="true"
                android:text="@string/coached_class_compulsory"
                android:textAlignment="center"
                android:textSize="18dp"
                android:textStyle="bold" />

        <RadioButton
                android:id="@+id/coached_select_must_selected"
                android:layout_width="55dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/ic_coached_class_select"
                android:button="@null"
                android:text="@string/coached_class_must＿select"
                android:textAlignment="center"
                android:textSize="18dp"
                android:textStyle="bold" />

        <RadioButton
                android:id="@+id/coached_select_together"
                android:layout_width="55dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/ic_coached_class_select"
                android:button="@null"
                android:text="@string/coached_class_together_compulsory"
                android:textAlignment="center"
                android:textSize="18dp"
                android:textStyle="bold" />

        <RadioButton
                android:id="@+id/coached_select_program"
                android:layout_width="55dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/ic_coached_class_select"
                android:button="@null"
                android:text="@string/coached_class_programming"
                android:textAlignment="center"
                android:textSize="18dp"
                android:textStyle="bold" />
    </RadioGroup>


    <TextView
            android:id="@+id/coached_subjects"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@id/text_input_subject"
            android:padding="10dp"
            android:text="@string/coached＿subject"
            android:textSize="18dp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/coached_radio_group" />

    <EditText
            android:id="@+id/text_input_subject"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/input_edit_round"
            android:hint="@string/hint_coached_subject"
            android:importantForAutofill="no"
            android:inputType="textNoSuggestions"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/coached_subjects"/>



    <TextView
            android:id="@+id/coach_allow_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/allow_time"
            android:textSize="18dp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_input_subject" />

    <TableLayout
            android:id="@+id/select_coached_allow_time"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/coach_allow_time">

    </TableLayout>


    <TextView
            android:id="@+id/coached_request_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@id/input_coached_request"
            android:padding="10dp"
            android:text="@string/coach_request"
            android:textSize="18dp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/select_coached_allow_time" />

    <EditText
            android:id="@+id/input_coached_request"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:maxLength="150"
            android:hint="@string/hint_coach_request"
            android:layout_marginTop="5dp"
            android:background="@drawable/input_edit_round"
            android:gravity="top"
            android:padding="15dp"
            android:importantForAutofill="no"
            android:inputType="textImeMultiLine"
            android:singleLine="false"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/coached_request_text" />

    <TextView
            android:id="@+id/personl_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/personal_information"
            android:textSize="18dp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/input_coached_request" />

    <ImageView
            android:id="@+id/edit_personal_information"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/form"
            app:layout_constraintLeft_toRightOf="@+id/personl_info"
            app:layout_constraintTop_toBottomOf="@id/input_coached_request"
            android:contentDescription="@string/desc"/>

    <Button
            android:id="@+id/coached_btn_send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:text="@string/coached_send_application"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>