<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="15dp"
            app:cardUseCompatPadding="false"
            app:cardCornerRadius="10dp">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

            <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/courseRow_collapse_height"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:id="@+id/my_course_item_up_part_layout"
                    android:descendantFocusability="blocksDescendants">

                <!-- Line1 -->

                <com.example.cs.pushpull.extension.RectangleTextView
                        android:id="@+id/my_course_item_circular_text_view"
                        android:layout_width="100dp"
                        android:layout_height="50dp"
                        android:layout_marginTop="10dp"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:gravity="center"
                        android:textSize="15sp"
                        android:padding="3dp"/>

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignBaseline="@+id/my_course_item_check_favorite"
                        android:layout_toRightOf="@id/my_course_item_circular_text_view"
                        android:layout_toEndOf="@id/my_course_item_circular_text_view"
                        android:layout_marginLeft="25dp"
                        android:layout_marginStart="10dp"
                        android:paddingRight="40dp"
                        android:paddingEnd="40dp"
                        android:textSize="20sp"
                        android:ellipsize="end"
                        android:id="@+id/my_course_item_name"
                        tools:ignore="RelativeOverlap,RtlSymmetry"/>

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/my_course_item_circular_text_view"
                        android:layout_marginTop="2dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginStart="10dp"
                        android:id="@+id/my_course_item_num_of_student"
                        android:textColor="@color/colorPrimary"/>

                <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentEnd="true"
                        android:layout_marginTop="20dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginEnd="10dp"
                        android:button="@drawable/heart_checkbox"
                        android:id="@+id/my_course_item_check_favorite"/>

                <!-- Line2 -->
                <CheckBox
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:gravity="center"
                        android:id="@+id/my_course_item_checkbox_btn"
                        android:textColor="#7b7b7b"
                        android:layout_below="@id/my_course_item_check_favorite"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentEnd="true"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="10dp"
                        android:background="@drawable/btn_check_action"
                        android:button="@drawable/btn_check_action"
                        android:layout_marginEnd="10dp"/>

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentEnd="true"
                        android:layout_below="@id/my_course_item_checkbox_btn"
                        android:id="@+id/my_course_item_state"
                        android:layout_marginTop="5dp"/>

                <!-- Intro -->

                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="35dp"
                        android:layout_below="@id/my_course_item_circular_text_view"
                        android:text="@string/course_item_intro_title"
                        android:id="@+id/my_course_item_intro_title"/>

                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/my_course_item_intro_title"
                        android:id="@+id/my_course_item_intro"/>

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/my_course_item_intro"
                        android:paddingTop="20dp"
                        android:text="@string/course_item_course_teacher_title"
                        android:id="@+id/my_course_item_course_teacher_title"/>

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/my_course_item_intro"
                        android:layout_toRightOf="@id/my_course_item_course_teacher_title"
                        android:layout_toEndOf="@id/my_course_item_course_teacher_title"
                        android:paddingTop="20dp"
                        android:id="@+id/my_course_item_course_teacher_content"/>

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/my_course_item_course_teacher_title"
                        android:text="@string/course_item_target_student_title"
                        android:id="@+id/my_course_item_target_student_title"/>

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/my_course_item_course_teacher_title"
                        android:layout_toRightOf="@id/my_course_item_target_student_title"
                        android:layout_toEndOf="@id/my_course_item_target_student_title"
                        android:id="@+id/my_course_item_target_student_content"/>

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/my_course_item_target_student_title"
                        android:text="@string/course_item_num_of_student_title"
                        android:id="@+id/my_course_item_num_of_student_title"/>

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/my_course_item_target_student_title"
                        android:layout_toRightOf="@id/my_course_item_num_of_student_title"
                        android:layout_toEndOf="@id/my_course_item_num_of_student_title"
                        android:id="@+id/my_course_item_num_of_student_content"/>

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/my_course_item_num_of_student_content"
                        android:text="@string/course_item_campus_title"
                        android:id="@+id/my_course_item_campus_title"/>

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/my_course_item_num_of_student_content"
                        android:layout_toRightOf="@id/my_course_item_campus_title"
                        android:layout_toEndOf="@id/my_course_item_campus_title"
                        android:id="@+id/my_course_item_campus_content"/>

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/my_course_item_campus_title"
                        android:paddingTop="20dp"
                        android:text="@string/course_item_course_date_title"
                        android:id="@+id/my_course_item_course_date_title"/>

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/my_course_item_campus_title"
                        android:layout_toRightOf="@id/my_course_item_course_date_title"
                        android:layout_toEndOf="@id/my_course_item_course_date_title"
                        android:paddingTop="20dp"
                        android:id="@+id/my_course_item_course_date_content"/>

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/my_course_item_course_date_content"
                        android:text="@string/course_item_course_place_title"
                        android:id="@+id/my_course_item_course_place_title"/>

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/my_course_item_course_date_content"
                        android:layout_toRightOf="@id/my_course_item_course_place_title"
                        android:layout_toEndOf="@id/my_course_item_course_place_title"
                        android:id="@+id/my_course_item_course_place_content"/>

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/my_course_item_course_place_title"
                        android:text="@string/course_item_apply_date_title"
                        android:id="@+id/my_course_item_apply_date_title"/>

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/my_course_item_course_place_title"
                        android:layout_toRightOf="@id/my_course_item_apply_date_title"
                        android:layout_toEndOf="@id/my_course_item_apply_date_title"
                        android:id="@+id/my_course_item_apply_date_content"/>

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/my_course_item_apply_date_content"
                        android:text="@string/course_item_course_cost_title"
                        android:id="@+id/my_course_item_course_cost_title"/>

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/my_course_item_apply_date_content"
                        android:layout_toRightOf="@id/my_course_item_course_cost_title"
                        android:layout_toEndOf="@id/my_course_item_course_cost_title"
                        android:id="@+id/my_course_item_course_cost_content"/>

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/my_course_item_course_cost_title"
                        android:paddingTop="20dp"
                        android:text="@string/course_item_apply_method_title"
                        android:id="@+id/my_course_item_apply_method_title"/>

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/my_course_item_course_cost_title"
                        android:layout_toRightOf="@id/my_course_item_apply_method_title"
                        android:layout_toEndOf="@id/my_course_item_apply_method_title"
                        android:paddingTop="20dp"
                        android:id="@+id/my_course_item_apply_method_content"/>

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/my_course_item_apply_method_title"
                        android:text="@string/course_item_enroll_post_title"
                        android:id="@+id/my_course_item_enroll_post_title"/>

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/my_course_item_apply_method_title"
                        android:layout_toRightOf="@id/my_course_item_enroll_post_title"
                        android:layout_toEndOf="@id/my_course_item_enroll_post_title"
                        android:id="@+id/my_course_item_enroll_post_content"/>

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/my_course_item_enroll_post_title"
                        android:text="@string/course_item_other_title"
                        android:id="@+id/my_course_item_other_title"/>

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/my_course_item_enroll_post_title"
                        android:layout_toRightOf="@id/my_course_item_other_title"
                        android:layout_toEndOf="@id/my_course_item_other_title"
                        android:id="@+id/my_course_item_other_content"/>

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/my_course_item_other_content"
                        android:text="@string/course_item_apply_result_title"
                        android:id="@+id/my_course_item_apply_result_title"/>

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/my_course_item_other_content"
                        android:layout_toRightOf="@id/my_course_item_apply_result_title"
                        android:layout_toEndOf="@id/my_course_item_apply_result_title"
                        android:id="@+id/my_course_item_apply_result_content" android:textColor="#FF0000"/>

                <!-- Button -->

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/my_course_item_apply_result_title"
                        android:id="@+id/my_course_item_two_buttons"
                        android:orientation="horizontal">

                    <Button
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.5"
                            android:background="@drawable/btn_capsule"
                            android:layout_marginTop="10dp"
                            android:layout_marginRight="5dp"
                            android:layout_marginEnd="5dp"
                            android:layout_marginBottom="20dp"
                            android:id="@+id/my_course_item_left_button"
                            android:text="@string/satisfaction_survey"
                            tools:ignore="ButtonStyle"/>

                    <Button
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.5"
                            android:background="@drawable/btn_capsule"
                            android:layout_marginTop="10dp"
                            android:layout_marginBottom="20dp"
                            android:id="@+id/my_course_item_right_button"
                            android:text="@string/response"
                            tools:ignore="ButtonStyle"/>

                </LinearLayout>

                <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/my_course_item_apply_result_title"
                        android:layout_centerInParent="true"
                        android:background="@drawable/btn_capsule"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="20dp"
                        android:id="@+id/my_course_item_list_button"/>

            </RelativeLayout>

            <ImageView android:layout_height="wrap_content"
                       android:layout_width="match_parent"
                       android:layout_marginBottom="5dp"
                       android:src="@drawable/expand_arrow"
                       android:id="@+id/my_course_item_arrow"
                       android:contentDescription="@string/arrow_content_description"/>

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>